--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     image: postgres:16.3
     container_name: postgres
     environment:
-      POSTGRES_DB: bulb_local
+      POSTGRES_DB: bulbsocial_dev
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     networks:
