--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,12 +1,12 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    schema: "migrations"
-    queries: "internal/db/query"
+    schema: "internal/db/migrations"
+    queries: "internal/db/queries"
     gen:
       go:
-        package: "db"
-        out: "internal/db"
+        package: "sqlc"
+        out: "internal/db/sqlc"
         emit_json_tags: true
         emit_interface: true
         emit_empty_slices: true
