--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "bin"
 [build]
   args_bin = []
   bin = "./bin/main"
-  cmd = "go build -o ./bin/main ./cmd/api/*.go"
+  cmd = "go build -o ./bin/main ./cmd/main.go"
   delay = 1000
   exclude_dir = ["assets", "bin", "vendor", "testdata", "docs", "scripts"]
   exclude_file = []
