--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,8 +5,7 @@ sql:
     queries: "internal/db/queries"
     gen:
       go:
-        package: "sqlc"
-        out: "internal/db/sqlc"
+        package: "db"
+        out: "internal/db"
         emit_json_tags: true
-        emit_interface: true
         emit_empty_slices: true
